Fix info-panel not showing on select

--- a/src/Weaver.WebApp/packages/graph/src/components/node-info-panel/node-info-panel.module.scss
+++ b/src/Weaver.WebApp/packages/graph/src/components/node-info-panel/node-info-panel.module.scss
@@ -1,8 +1,23 @@
-.container {
-  position: absolute;
-  top: 0;
-  right: 0;
+$container-width: 400px;
+$container-height: 90vh;
 
-  height: 90vh;
-  width: 750px;
+.container {
+  position: fixed;
+  top: 50vh;
+  right: 2rem;
+
+  height: $container-height;
+  width: $container-width;
+
+  transform: translateY(-47%);
+  z-index: 1;
+
+  &-loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: $container-width;
+    height: $container-height;
+  }
 }
