--- a/src/Weaver.WebApp/src/App.module.scss
+++ b/src/Weaver.WebApp/src/App.module.scss
@@ -7,6 +7,6 @@
 
 .theme-toggle {
   position: fixed !important;
-  bottom: 1.5rem;
+  top: 1.5rem;
   right: 2rem;
 }
